[add subsec] Putting logo on an image: What we did and why we did it

--- a/04_arithmatic_operations_on_images.ipynb
+++ b/04_arithmatic_operations_on_images.ipynb
@@ -424,6 +424,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Hey you ever wonder what bitwise means in this context? Well it's just that, the specific operation (AND, OR, NOT etc.) is performed bitwise (one bit at a time) for each channel in the images, meaning that for color images, it will be applied to each of the Red, Green, and Blue channels separately. If you don't seem to understand what all this means then [Watch this video](https://www.youtube.com/watch?v=bizj3dle8Qc) come back and read again."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -436,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**All the opencv bitwise operators takes one common (optional) argument, `mask`.** A mask is a **8-bit** single channel array, that specifies elements of the output array to be changed."
+    "**All the opencv bitwise operators takes one common (optional) argument, `mask`.** `A mask is a 8-bit single channel array, that specifies elements of the output array to be changed.`"
    ]
   },
   {
@@ -936,6 +943,41 @@
    "source": [
     "panda_img[0:logo_h, (panda_img_w - logo_w) :, :] = dst\n",
     "matplotlib_imshow(\"Panda Image With OpenCV Logo\", panda_img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *So what did we do and why we did it?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Upto the 4th step (where we converted the logo image to a grayscale one) is pretty much understandable. We will discuss starting from the 5th step. Just **keep in mind** that, the `mask defines which elements in the output will be modified.`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **`In the 5th step`**, we created a mask from our grayscaled logo image. In the mask the logo area we are interested in is all black. To do that we thresholded the image with the flag *cv.THRESH_BINARY*. This thresholding caused our logo mask to have either 255 (1 in each bit of the 8 bits) or 0 (0 in each bit of the 8 bits) as pixel values. As a result the logo area we are interested in ended up with 0's as pixel values. So what's the benefit? The benefit is that, **`in the 7th step`** when we use *cv.bitwise_and()* we effectively eliminate the possiblity of changing the elements (in the output roi image) outside the interested logo area (as those bits contains 1's). But this has one disadvantage too. The logo we want to put will now be all black instead of the vibrant color we want. How do we fix that?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **`In the 6th step`**, we created an inverted mask where the logo area we are interested in is all white and the surrounding area is all black. **`In the 8th step`** we use this mask with *cv.bitwise_and()* and apply it to the original logo image. This allows the logo area we are interested in to peer through (if you will). Now we can use this output image to fix the problem produced in the previous step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The image output in the 7th step has the logo area we are interested in as all black but the surrounding area is RGB. The image output in the 8th step has the logo area we are interested in RGB but the surrounding area is all black. See where we are going with that? We add these two images to produce the desired output image, the original roi with logo imprinted on it."
    ]
   },
   {
