add details about image sharpening

--- a/06_noise_in_images.ipynb
+++ b/06_noise_in_images.ipynb
@@ -606,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, If the Variance score of Laplacian convolved image is anything to judge by then Bilateral Filters works the best (At least for this particular image)."
+    "So, If the Variance score of Laplacian convolved image is anything to judge by then Bilateral Filters works the best to remove noise as well as keeping the edges (At least for this particular image)."
    ]
   },
   {
@@ -670,7 +670,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The blue patches in the image looks the similar. Green patches looks similar. So we take a pixel, take small window around it, search for similar windows in the image, average all the windows and replace the pixel with the result we got. This method is Non-Local Means Denoising. It takes more time compared to blurring techniques we saw earlier, but its result is very good."
+    "The blue patches in the image looks the similar. Green patches looks similar. So we take a pixel, take small window around it, search for similar windows in the image, average all the windows and replace the pixel with the result we got. This method is Non-Local Means Denoising. It takes more time compared to blurring techniques we saw earlier, but its output quality is very good."
    ]
   },
   {
@@ -754,7 +754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sharpening an image is the process of increasing the contrast between adjacent pixels to enhance the details in an image. This can be useful for a number of different image processing tasks, such as improving the clarity of an image, restoring details that have been lost due to blurring, or making an image appear more vivid and crisp."
+    "Sharpening an image is the process of **increasing the contrast between adjacent pixels** to enhance the details in an image. This can be useful for a number of different image processing tasks, such as improving the clarity of an image, restoring details that have been lost due to blurring, or making an image appear more vivid and crisp."
    ]
   },
   {
@@ -762,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will need to use the `cv.filter2D(src, ddepth, kernel, anchor)` function. As the kernel, we will use the [standard sharpening kernel](https://wikimedia.org/api/rest_v1/media/math/render/svg/beb8b9a493e8b9cf5deccd61bd845a59ea2e62cc)."
+    "We will need to use the `cv.filter2D(src, ddepth, kernel, anchor)` function. For the kernel we will use the [standard sharpening kernel](https://wikimedia.org/api/rest_v1/media/math/render/svg/beb8b9a493e8b9cf5deccd61bd845a59ea2e62cc)."
    ]
   },
   {
@@ -803,6 +803,13 @@
    ],
    "source": [
     "matplotlib_imshow(\"Dog (Sharpened the Denoised Image)\", denoised_dog_sharpened, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`Note:`** Image contrast is the difference in luminance or color between different parts of an image, while image sharpening is a process that enhances edges and details in an image. Image sharpening can improve the perceived contrast by emphasizing the transitions between pixels, making the image look sharper and more defined. However, adjusting the actual contrast of an image involves modifying the range of pixel values or color differences throughout the entire image."
    ]
   },
   {
