--- a/08_thresholding.ipynb
+++ b/08_thresholding.ipynb
@@ -112,7 +112,7 @@
     "    - cv.THRESH_TOZERO\n",
     "    - cv.THRESH_TOZERO_INV\n",
     "\n",
-    "**Returns:** The method returns two outputs. The first is the threshold value that was used and the second output is the thresholded image."
+    "**Returns:** (threshold_val, thresholded_img)"
    ]
   },
   {
@@ -354,7 +354,7 @@
     "    - median: apply median rank filter\n",
     "- offset: Constant subtracted from weighted mean of neighborhood to calculate the local threshold value. Default offset is 0.\n",
     "\n",
-    "**Returns:** Threshold image (ndarray). This array contains the threshold value calculated by the 'threshold_local()' function for each of the pixel in the input image."
+    "**Returns:** Threshold image (ndarray). This array **contains the threshold value** calculated by the 'threshold_local()' function **for each of the pixel** in the input image."
    ]
   },
   {
@@ -404,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**`->`** When we convert an Image to the HSV color space, the 'ndarray' it returns is of the shape (width, height, 3) i.e, it contains 3 separate color channels, one for each of H,S and V component. So, we need to split the 3 channel HSV image array into separate H, S, V channels and pass the V component as the argument of 'image'. "
+    "**`->`** When we convert an Image to the HSV color space, the 'ndarray' it returns is of the shape (height, width, 3) i.e, it contains 3 separate color channels, one for each of H,S and V component. So, we need to split the 3 channel HSV image array into separate H, S, V channels and pass the V component as the argument of 'image'. "
    ]
   },
   {
