Numpy > (img_h, img_w, ch); OpenCV > (img_w, img_h)

--- a/18_histogram_equalization.ipynb
+++ b/18_histogram_equalization.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The `cv.equalizeHise(src)` function is used for Histogram Equalization of 8 bit single channel images."
+    "> The `cv.equalizeHist(src)` function is used for Histogram Equalization of 8 bit single channel images."
    ]
   },
   {
