[subsec] Color Space Conversion

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -215,6 +215,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### *Color Space Conversion* ([Source: ChatGPT](https://chat.openai.com/share/a70b7da3-e745-4e8d-b1b5-a7b789ea2080))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In OpenCV, a color space is a specific way of representing colors in an image. Different color spaces have different characteristics and are suited for various image processing tasks. Some of the commonly used color spaces in OpenCV include RGB, HSV, LAB, and YUV.\n",
+    "\n",
+    "Color space conversion is the process of converting an image from one color space to another. OpenCV provides functions to perform color space conversions, allowing you to switch between different color representations depending on the requirements of your image processing tasks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Various image processing techniques works better in a particular color representations than others. While there isn't a definitive \"one-size-fits-all\" rule, here are some general guidelines and use cases for popular color spaces to help you make a decision:\n",
+    "\n",
+    "1. RGB (Red, Green, Blue):\n",
+    "   - Commonly used for general image display and visualization.\n",
+    "   - Suitable for tasks related to digital photography, computer graphics, and displaying images on screens.\n",
+    "   - May not be ideal for certain computer vision tasks that require color-based segmentation or color information analysis.\n",
+    "\n",
+    "2. HSV (Hue, Saturation, Value):\n",
+    "   - Well-suited for tasks involving color segmentation and object detection based on color range.\n",
+    "   - Helpful in scenarios where you want to filter specific colors or isolate regions with certain hues.\n",
+    "   - Useful for tasks related to tracking objects with distinct colors in real-time applications.\n",
+    "\n",
+    "3. LAB (Lightness, A channel, B channel):\n",
+    "   - Particularly useful for color-based image segmentation and object detection.\n",
+    "   - Suitable for tasks that require uniform color perception, as the L channel (Lightness) approximates human perception of brightness.\n",
+    "   - Often used in color-related computer vision algorithms.\n",
+    "\n",
+    "4. YUV (Luminance, Chrominance U, Chrominance V):\n",
+    "   - Widely used in video compression and transmission.\n",
+    "   - Can be useful for separating image luminance information from color information.\n",
+    "   - Used in some video processing applications, but less commonly utilized in other computer vision tasks.\n",
+    "\n",
+    "While these guidelines can be helpful, it's essential to understand the nature of your specific image processing task and experiment with different color spaces to see which one yields the best results for your particular use case."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> For **`color space conversion`**, we can use `cv.cvtColor(input_image, flag)` where, `flag` determines the type of conversion (depending on the defined color space conversion code). See [Color Space Conversion Codes](https://docs.opencv.org/3.4/d8/d01/group__imgproc__color__conversions.html#ga4e0972be5de079fed4e3a10e24ef5ef0)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The HSV colorspace has 3 components. `Hue (type of color): 0 - 360, Saturation (intensity): 0 - 255, Value (brightness): 0 - 255`.**\n",
+    "\n",
+    "<img src=\"./imgs/hsv_color_space.png\" height=300 width=500)>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "In image processing and computer vision, the HSV color model is a representation of colors using three components: H (Hue), S (Saturation), and V (Value). The HSV color model is designed to be more intuitive and easy to work with compared to the traditional RGB (Red, Green, Blue) color model.\n",
+    "\n",
+    "1. **Hue** (H):\n",
+    "Hue represents the **type of color** or the dominant wavelength of light in the image. It is measured as an angle on the color wheel, ranging from 0 to 360 degrees. The hues 0 and 360 both correspond to red, while the other hues are distributed around the wheel to cover all the different colors of the spectrum. For example, green is around 120 degrees, and blue is around 240 degrees.\n",
+    "\n",
+    "2. **Saturation** (S):\n",
+    "Saturation measures the **intensity or purity of the color**. A value of 0 means the color is fully desaturated, resulting in a grayscale image (no color). As the value of S increases, the color becomes more vibrant and saturated. At its maximum (S = 255), the color is fully saturated and has its purest form.\n",
+    "\n",
+    "3. **Value** (V):\n",
+    "Value represents the **brightness or lightness** of the color. A value of 0 means the color is completely black, regardless of the hue and saturation values. As the value of V increases, the color becomes brighter. At its maximum (V = 255), the color is at its full brightness.\n",
+    "\n",
+    "Using the HSV color model, one can manipulate the individual components to change the color appearance of an image, perform color segmentation, or extract specific color ranges for further analysis. It is a popular choice in various computer vision applications due to its simplicity and natural representation of color perception."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -278,14 +358,6 @@
    "metadata": {},
    "source": [
     "There is a little caveat though. OpenCV uses BGR color model. And Matplotlib reflects this in its output. So, first we will need to convert the color model of the 'mat' to RGB in order to properly display it using matplotlib."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> For **`color space conversion`**, we can use `cv.cvtColor(input_image, flag)` where, `flag` determines the type of conversion (depending on the defined color space conversion code). See [Color Space Conversion Codes](https://docs.opencv.org/3.4/d8/d01/group__imgproc__color__conversions.html#ga4e0972be5de079fed4e3a10e24ef5ef0)."
    ]
   },
   {
