[chore] add explanation to the SkImage for Adaptive Thresholding section

--- a/08_thresholding.ipynb
+++ b/08_thresholding.ipynb
@@ -345,7 +345,7 @@
    "metadata": {},
    "source": [
     "<u>Function Parameters</u>\n",
-    "- image: input image (ndarray).\n",
+    "- image: 8 bit input image (ndarray).\n",
     "- block_size: Odd size of pixel neighborhood which is used to calculate the threshold value (e.g. 3, 5, …).\n",
     "- method: Method used to determine adaptive threshold for local neighborhood in weighted mean image.\n",
     "    - generic: use custom function (see param parameter)\n",
@@ -354,7 +354,7 @@
     "    - median: apply median rank filter\n",
     "- offset: Constant subtracted from weighted mean of neighborhood to calculate the local threshold value. Default offset is 0.\n",
     "\n",
-    "**Returns:** Threshold image (ndarray). This array **contains the threshold value** calculated by the 'threshold_local()' function **for each of the pixel** in the input image."
+    "**Returns:** Threshold array (ndarray). This array **contains the threshold values** calculated by the 'threshold_local()' function **for each of the pixel** in the input image."
    ]
   },
   {
@@ -362,20 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**All elements (pixels) of the input image with value higher than the corresponding value of pixels in the threshold image are considered foreground.**"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b><u>Note:</u></b>\n",
-    "Before passing the image to the 'threshold_local' function, the image needs to be transformed to the `HSV` colorspace. \n",
-    "\n",
-    "The HSV colorspace has 3 components. `Hue: 0 - 179, Saturation: 0 - 255, Value (Intensity): 0 - 255`.\n",
-    "\n",
-    "<img src=\"./imgs/hsv_color_space.png\" height=300 width=500)>"
+    "**All elements (pixels) of the input image with value higher than the corresponding value of pixels in the threshold array are considered foreground.**"
    ]
   },
   {
@@ -391,20 +378,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`->`** When we convert an Image to the HSV color space it has 3 separate color channel components namely, Hue, Saturation and Value. We can use `cv.split()` to separate the H, S, V channels. This is done for the fact that in image processing tasks such as color segmentation, filtering based on color (type, intensity or brightness), object detection based on color etc. HSV color space is more suitable than RGB color space."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "scan_img_hsv = cv.cvtColor(scan_img_color_blur, cv.COLOR_BGR2HSV)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**`->`** When we convert an Image to the HSV color space, the 'ndarray' it returns is of the shape (height, width, 3) i.e, it contains 3 separate color channels, one for each of H,S and V component. So, we need to split the 3 channel HSV image array into separate H, S, V channels and pass the V component as the argument of 'image'. "
    ]
   },
   {
@@ -416,6 +403,13 @@
     "# Hue, Saturation and Value (intensity) matrices\n",
     "H, S, V = cv.split(scan_img_hsv)\n",
     "# or, V = cv.cvtColor(scan_img_color, cv.COLOR_BGR2HSV)[:, :, 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`->`** Here, we used the V (value, brightness) channel as the input image to the *threshold_local* function. A value of 0 means that the color is completely black regardless of the hue and saturation values. The maximum value of 255 means that the color is at its most brightness. (if both hue and saturation is 0 then value of 255 represents pure white)."
    ]
   },
   {
@@ -449,7 +443,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc7d0643e10>"
+       "<matplotlib.image.AxesImage at 0x7f02a1ae3690>"
       ]
      },
      "execution_count": 17,
@@ -487,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc7d0685c90>"
+       "<matplotlib.image.AxesImage at 0x7f02a00c9010>"
       ]
      },
      "execution_count": 18,
