[chore] Some more details about HSV color space

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### *Color Space Conversion* ([Source: ChatGPT](https://chat.openai.com/share/a70b7da3-e745-4e8d-b1b5-a7b789ea2080))"
+    "#### *Color Space Conversion* ([Source: ChatGPT](https://chat.openai.com/share/a70b7da3-e745-4e8d-b1b5-a7b789ea2080))"
    ]
   },
   {
@@ -270,9 +270,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The HSV colorspace has 3 components. `Hue (type of color): 0 - 360, Saturation (intensity): 0 - 255, Value (brightness): 0 - 255`.**\n",
+    "##### The HSV color space"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The HSV colorspace has 3 components, `Hue (type of color): 0 - 360, Saturation (intensity / color depth): 0 - 1, Value (brightness): 0 - 1.`\n",
     "\n",
-    "<img src=\"./imgs/hsv_color_space.png\" height=300 width=500)>"
+    "<img src=\"./imgs/hsv_color_space.jpeg\" height=300 width=600)> <img src=\"./imgs/hsv_cone.png\" height=300 width=300)>"
    ]
   },
   {
@@ -286,12 +293,19 @@
     "Hue represents the **type of color** or the dominant wavelength of light in the image. It is measured as an angle on the color wheel, ranging from 0 to 360 degrees. The hues 0 and 360 both correspond to red, while the other hues are distributed around the wheel to cover all the different colors of the spectrum. For example, green is around 120 degrees, and blue is around 240 degrees.\n",
     "\n",
     "2. **Saturation** (S):\n",
-    "Saturation measures the **intensity or purity of the color**. A value of 0 means the color is fully desaturated, resulting in a grayscale image (no color). As the value of S increases, the color becomes more vibrant and saturated. At its maximum (S = 255), the color is fully saturated and has its purest form.\n",
+    "Saturation measures the **intensity or purity of the color**. A value of 0 means the color is fully desaturated, resulting in a grayscale image (no color). As the value of S increases, the color becomes more vibrant and saturated. At its maximum (S = 1), the color is fully saturated and has its purest form. You can also think of saturation as the parameter that defines the **shade** of a color. The more the saturation, the **more deep** the color will look. It can also be thought as the **strength** of a color.\n",
     "\n",
     "3. **Value** (V):\n",
-    "Value represents the **brightness or lightness** of the color. A value of 0 means the color is completely black, regardless of the hue and saturation values. As the value of V increases, the color becomes brighter. At its maximum (V = 255), the color is at its full brightness.\n",
+    "Value represents the **brightness or lightness** of the color. A value of 0 means the color is completely black, regardless of the hue and saturation values. As the value of V increases, the color becomes brighter. At its maximum (V = 1), the color is at its full brightness.\n",
     "\n",
     "Using the HSV color model, one can manipulate the individual components to change the color appearance of an image, perform color segmentation, or extract specific color ranges for further analysis. It is a popular choice in various computer vision applications due to its simplicity and natural representation of color perception."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`Note:` In OpenCV, the `S and V` values ranges between `0-255` due to `8 bit` representation.**"
    ]
   },
   {
