[resource] https://en.wikipedia.org/wiki/Web_colors#HTML_color_names

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -309,6 +309,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Here's a [table](https://en.wikipedia.org/wiki/Web_colors#HTML_color_names) that shows how different color chaneels of the RGB, HSV and HSL color spaces combines to create the 16 basic colors defined in the HTML 4.01 specification, ratified in 1999.**"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
