--- a/19_template_matching.ipynb
+++ b/19_template_matching.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "`Discussion:` Looks like we were able to detect only 6 out of the possible 15 coins (with many double detections). Some playing around with the threshold value shows that if threshold value is >= 0.5 it doesn't detect any of the coins. If threshold value is <=0.4 there are too many false detections and it doesn't even correctly detect more than 6 coins.\n",
     "\n",
-    "So, why is that? Our guess is, maybe because of the template we used to search for the coins. The template we used were collected from a different image and has different background than the image we were searching over. Also the coins in the source image has varying colors (lighter and darker shades of yellow, and also some deep brown ones). The interesting thing is, the cv.matchTemplate() function was able to detect deep brown coins and failed to detect lighter colored ones although the template is a coin of lighter shade of yellow."
+    "So, why is that? Maybe because of the template we used to search for the coins. The template we used was collected from a different image and has different background than the image we were searching over. Also the coins in the source image has varying colors (lighter and darker shades of yellow, and also some deep brown ones). The interesting thing is, the cv.matchTemplate() function was able to detect the deep brown coins and failed to detect lighter colored ones although the template is a coin of lighter shade of yellow."
    ]
   },
   {
