--- a/20_hough_transform.ipynb
+++ b/20_hough_transform.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "The classical Hough transform was primarily concerned with the identification of lines in the image. But later the Hough transform has been extended to identifying positions of shapes that can be represented in a mathematical form, most commonly circles or ellipses.\n",
     "\n",
-    "The Hough transform as it is universally used today was invented by Richard Duda and Peter Hart in 1972, who called it a \"generalized Hough transform\" after the related 1962 patent of Paul Hough. The transform was popularized in the computer vision community by Dana H. Ballard through a 1981 journal article titled \"Generalizing the Hough transform to detect arbitrary shapes\"."
+    "The Hough transform, as it is universally used today, was invented by Richard Duda and Peter Hart in 1972, who called it a \"generalized Hough transform\" after the related 1962 patent of Paul Hough. The transform was popularized in the computer vision community by Dana H. Ballard through a 1981 journal article titled \"Generalizing the Hough transform to detect arbitrary shapes\"."
    ]
   },
   {
