--- a/00_digital_images_and_color_spaces.ipynb
+++ b/00_digital_images_and_color_spaces.ipynb
@@ -11,30 +11,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First let's briefly understand a fundamental concept, **Color models** or, **Color spaces**."
+    "<img src=\"./imgs/how_computer_sees_an_image.png\" height=350 width=900> "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simply said, ***A color space is a specific way of representing colors in an image.***\n",
+    "A computer doesn't have vision as humans do. It stores an image as digital data by encoding each pixel in the image as a combination of digital representation of the basic colors in the color model (also known as color space)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So what's a Color model or Color space? Simply said, ***A color space is a specific way of representing colors in an image.***\n",
     "\n",
-    "Different color spaces have different characteristics and are suited for various image processing tasks. Some of the commonly used color spaces in OpenCV include RGB, HSV, LAB, and YUV.\n"
+    "Different color spaces have different characteristics and are suited for various image processing tasks. The most popular color model is `RGB`, although `OpenCV` uses the `BGR` color model by default. Some of the other commonly used color spaces in OpenCV include HSV, LAB, and YUV."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A computer doesn't have vision as humans do. It stores an image as digital data by encoding each pixel in the image as a combination of digital representation of the basic colors in the color model. The most popular color model is `RGB`, although `OpenCV` uses the `BGR` color model by default."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"./imgs/rgb_color_model.png\" height=300 width=600>"
+    "<img src=\"./imgs/rgb_color_model.png\" height=300 width=600> <img src='https://raw.githubusercontent.com/rajeevratan84/ModernComputerVision/main/array.png?token=ADLZD2HNEL33JAKTYRM3B5C7WMIV4' height=300 width=350>"
    ]
   },
   {
@@ -48,14 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Grayscale images are usually 8 bits`, with `0 representing pure black and 255 representing pure white.` The values in between represents some shade of gray. *There are some functions and libraries that only takes grayscale images.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"./imgs/how_computer_sees_an_image.png\" height=250 width=500> <img src='https://raw.githubusercontent.com/rajeevratan84/ModernComputerVision/main/array.png?token=ADLZD2HNEL33JAKTYRM3B5C7WMIV4' height=250 width=350>"
+    "*There are some functions and libraries that only takes grayscale images.* `Grayscale images are single channel 8 bit images`, with `0 representing pure black and 255 representing pure white.` The values `in between` represents some `shade of gray`. "
    ]
   },
   {
@@ -76,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OpenCV uses the `BGR` color model to store images and images are stored as an `Array` (np.ndarray) objects. It is also often reffered to as the `Mat` object (i.e, a matrix)."
+    "OpenCV uses the `BGR` color model to store images and images are stored as an `Array` (np.ndarray object). It is also often reffered to as the `Mat` object (i.e, a matrix)."
    ]
   },
   {
@@ -130,14 +123,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### The HSV color space"
+    "- ### The HSV/HSL color space"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The HSV colorspace has 3 components, `Hue (type of color): 0 - 360, Saturation (intensity / color depth): 0 - 1, Value (brightness): 0 - 1.`\n",
+    "The HSV colorspace has 3 components, \n",
+    "- `Hue (type of color): 0 - 360`\n",
+    "- `Saturation (intensity / color depth): 0 - 1`\n",
+    "- `Value (brightness / lightness): 0 - 1` \n",
+    "\n",
+    "HSL (Hue, Saturation, Lightness).\n",
     "\n",
     "<img src=\"./imgs/hsv_color_space.jpeg\" height=300 width=600)> <img src=\"./imgs/hsv_cone.png\" height=300 width=300)>"
    ]
@@ -165,7 +163,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**`Note:` In OpenCV, the `H` value ranges between `0-179` instead of `0-359`. Also, the `S and V` values ranges between `0-255` instead of `0-1` due to `8 bit` representation.**"
+    "**`Note:` In OpenCV**, \n",
+    "- the `H` value ranges between *`0-179`* instead of *0-360*.\n",
+    "- Also, the `S and V (L)` values ranges between *`0-255`* instead of *0-1* due to *8 bit* representation."
    ]
   },
   {
@@ -212,25 +212,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
